--- a/24813.md
+++ b/24813.md
@@ -1,2 +1,101 @@
 24813
 
+快让我写祥鸣。。。
+
+日常
+
+1. 
+
+“铃——”
+
+*走廊一瞬间呜呜泱泱全是人
+
+柏：“收拾东西吧”
+
+磨磨蹭蹭的收拾完了东西，准备往出走
+
+：“可算放学了，tmd（脏话看需要取舍）数学晚课不是一般人能上的”
+
+抬腿迈出大门，发现楼梯口围满了人
+
+：”借过一下，借过一下
+
+（还是好奇他们围着干什么
+
+（占城拿个火机蹲在中间，地上放着一节红色的不明物体
+
+占城：“点了奥
+
+刹那间一声巨响充斥着走廊，你看到海洋正朝这边跑来，准备先走为上
+
+（和朋友交谈这类的自己写罢（我也不会
+
+你已经知道晚上的微信群有多热闹了
+
+：“这就是见证了新梗的诞生吗（乐
+
+但是占城在哪弄的鞭炮你就不得而知了
+
+：“这就是祥阁艺术家吗（neta了小迪的梗
+
+
+
+2. 
+
+祥阁学校人才辈出这件事早已是经过多次证明的定理了
+
+各种意义上的人才，精通火遁之术的也）
+
+（乐
+
+你永远无法想象祥阁学生除了学习还会点什么才艺
+
+体育课上看到皓轩（暂定）拿了个打火机
+
+：“（好奇
+
+：“你拿这个干什么，你也不抽烟
+
+然后他就从包里拿出了一瓶东西
+
+（炫一口
+
+（打开火机
+
+（wu
+
+一团火就水灵灵的从他嘴里出来了
+
+：“我↓靠
+
+：“我累个多才多艺，今年春晚没你我不看
+
+（好水
+
+3. 因为补作业到凌晨的缘故，早上上课一点精神都没有
+
+   甚至于敢在数学课趴桌子上睡觉
+
+   就在朦胧间你听到了自己的名字
+
+   “你说一下这个题
+
+   （迟疑
+
+   “我靠什么题啊我精炼都没拿出来
+
+   坐在你前面的男肾跟你比了个手势
+
+   “都不知道我讲到哪了↑，这一天天的你就迷糊吧
+
+   “昨晚上写作业写到几点啊？我留的不多吧（问前排的学生
+
+   “你们现在还有写作业写到后半夜的吗
+
+   （说着又叫了一个同学回答了这个问题
+
+   “你坐吧↓
+
+   （话说坐下之后又困了
+
+4. 
