--- a/24813.md
+++ b/24813.md
@@ -98,4 +98,32 @@
 
    （话说坐下之后又困了
 
-4. 
+4.
+
+*中午到校时间前 院墙
+
+翻墙进了祥阁（谁带的头
+
+走到了广播站，发现刘南瓜也在
+
+他手里拿着一个优盘
+
+刘：“我有个有意思的（怪笑
+
+（虽然觉得不妙但并没有说什么
+
+南瓜把优盘插♂进了电脑里，一顿鼓♂捣
+
+搞完之后他怪笑着跑开了
+
+（虽然很在意他搞了什么但是不得而知
+
+*放学
+
+铃声响起
+
+：“？什么动静
+
+（广播）：“内推入职，朝九晚六，做五休二。全国分公司，前三月试用期月薪8000，转正之后月薪26000，一年买车，两年买房，电话158****************，再加50块押金即可参与疯狂星期四活动”
+
+：“我草，南瓜搞的？
